# MTF

./: CMakeLists.txt  MTF.sln  README.md
MTF/: MTF.cpp  MTF.h  MTF.vcxproj  MTF.vcxproj.filters  main.cpp
MTF.Dev/: MTF.Dev.vcxproj  MTF.Dev.vcxproj.filters  Source.cpp  Test.cpp  Test.h
assets/: cylinder.tif
sfr/: CMakeLists.txt
sfr/include/sfr/: general.h  slanted.h
sfr/src/: general.cpp  slanted.cpp
sfrmain/: CMakeLists.txt
sfrmain/src/: main.cpp
